; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_irq_comm.c_kvm_unregister_irq_mask_notifier.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_irq_comm.c_kvm_unregister_irq_mask_notifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32, i32 }
%struct.kvm_irq_mask_notifier = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kvm_unregister_irq_mask_notifier(%struct.kvm* %0, i32 %1, %struct.kvm_irq_mask_notifier* %2) #0 {
  %4 = alloca %struct.kvm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.kvm_irq_mask_notifier*, align 8
  store %struct.kvm* %0, %struct.kvm** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.kvm_irq_mask_notifier* %2, %struct.kvm_irq_mask_notifier** %6, align 8
  %7 = load %struct.kvm*, %struct.kvm** %4, align 8
  %8 = getelementptr inbounds %struct.kvm, %struct.kvm* %7, i32 0, i32 1
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.kvm_irq_mask_notifier*, %struct.kvm_irq_mask_notifier** %6, align 8
  %11 = getelementptr inbounds %struct.kvm_irq_mask_notifier, %struct.kvm_irq_mask_notifier* %10, i32 0, i32 0
  %12 = call i32 @hlist_del_rcu(i32* %11)
  %13 = load %struct.kvm*, %struct.kvm** %4, align 8
  %14 = getelementptr inbounds %struct.kvm, %struct.kvm* %13, i32 0, i32 1
  %15 = call i32 @mutex_unlock(i32* %14)
  %16 = load %struct.kvm*, %struct.kvm** %4, align 8
  %17 = getelementptr inbounds %struct.kvm, %struct.kvm* %16, i32 0, i32 0
  %18 = call i32 @synchronize_srcu(i32* %17)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @hlist_del_rcu(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @synchronize_srcu(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
